crates/shipper-core/src/state/store/snapshots/shipper_core__store__snapshot_tests__directory_layout_after_full_save.snap
---
source: crates/shipper-core/src/state/store/snapshot_tests.rs
expression: layout
---
events.jsonl (size: >0)
receipt.json (size: >0)
state.json (size: >0)
