crates/shipper-core/src/state/store/snapshots/shipper_core__store__snapshot_tests__error_invalid_version_format.snap
---
source: crates/shipper-store/src/lib.rs
expression: err
---
invalid schema version format: invalid.version
