crates/shipper-core/src/state/store/snapshots/shipper_core__store__snapshot_tests__error_missing_v_prefix.snap
---
source: crates/shipper-core/src/state/store/snapshot_tests.rs
expression: err
---
invalid schema version format: shipper.receipt.2
