crates/shipper-core/src/state/store/snapshots/shipper_core__store__snapshot_tests__error_version_too_old.snap
---
source: crates/shipper-core/src/state/store/snapshot_tests.rs
expression: err
---
schema version shipper.receipt.v0 is too old. Minimum supported version is shipper.receipt.v1
