crates/shipper-core/src/state/store/snapshots/shipper_core__store__snapshot_tests__event_execution_finished_partial_failure.snap
---
source: crates/shipper-store/src/lib.rs
expression: json
---
{
  "timestamp": "2025-01-15T12:00:00Z",
  "event_type": {
    "type": "execution_finished",
    "result": "partial_failure"
  },
  "package": "all"
}
